Add OAuth, users collection, and updated swagger docs
